fix overlays and add annotations

--- a/fragments/full-cluster/overlays/contour-ipv4-overlay.yaml
+++ b/fragments/full-cluster/overlays/contour-ipv4-overlay.yaml
@@ -3,6 +3,8 @@ kind: Secret
 metadata:
   name: contour-ipv4-overlay
   namespace: tap-install
+  annotations:
+    package-to-overlay: "contour"
 stringData:
   ipv4-overlay.yaml: |
    #@ load("@ytt:overlay", "overlay")
