--- a/fragments/full-cluster/overlays/source-details-annotations-overlay.yaml
+++ b/fragments/full-cluster/overlays/source-details-annotations-overlay.yaml
@@ -4,6 +4,8 @@ kind: Secret
 metadata:
   name: source-details-annotations-overlay
   namespace: tap-install
+  annotations:
+    package-to-overlay: "ootb-templates"
 type: Opaque
 stringData:
   git-private-ca-overlay.yaml: |
